# oocr-influence

./: .gitignore  README.md  pyproject.toml
analysis/: extractive_structures.ipynb  influence_calculations.ipynb
experiments/: pretraining_sweep_on_the_cluster.sh  run_influence_on_facts.sh
scripts/: download_olmo.py  train_extractive.py  train_grokked.py
scripts/experiments/: learning_rate_experiment.py  slurm_train_extractive.sh
scripts/script_data/: OLMo-7B-0424-eval-only.yaml
src/oocr_influence/: eval.py  train.py  utils.py
src/oocr_influence/cli/: download_dolma.py  download_olmo.py  run_influence.py  train_extractive.py  train_grokked.py
src/oocr_influence/cli/sweeps/: learning_rate_experiment.py  slurm_train_extractive.sh
src/oocr_influence/datasets/: continual_pretraining.py  extractive_structures.py  grokked_transformer.py  utils.py
src/shared_ml/: data.py  eval.py  influence.py  logging.py  train.py  utils.py
src/shared_ml/cli/: rerun_command.py
tests/oocr_influence/: test_train.py
tests/oocr_influence/datasets/: test_extractive_structures.py
