[project]
name = "oocr-influence"
version = "0.1.0"
description = "Experiments using influence functions to inverstigate Out-of-context-reasoning (OOCR)."
readme = "README.md"
requires-python = "==3.12.*" # We have to pin to 3.12.x because of the dolma library relying on fasttext
dependencies = [
    "ai2-olmo>=0.6.0",
    "anthropic>=0.49.0",
    "antlr4-python3-runtime>=4.9.3",
    "datasets>=3.2.0",
    "debugpy>=1.8.11",
    "dolma>=1.0.8",
    "inspect-ai>=0.3.79",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "jsonlines>=4.0.0",
    "jupyter-console>=6.6.3",
    "kronfluence>=1.0.1",
    "matplotlib>=3.10.0",
    "nest-asyncio>=1.6.0",
    "notebook>=7.3.2",
    "openai>=1.69.0",
    "openpyxl>=3.1.5",
    "pip>=24.3.1",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.1",
    "pyright>=1.1.391",
    "pytest>=8.3.4",
    "ruff>=0.8.5",
    "seaborn>=0.13.2",
    "setuptools>=78.1.0",
    "termcolor>=2.5.0",
    "tiktoken>=0.8.0",
    "tokenizers>=0.21.0",
    "torch>=2.5.1",
    "transformers>=4.47.1",
    "wandb>=0.19.10",
]
[tool.ruff]
exclude = ["*.ipynb"]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-third-party = ["datasets"] # We have to add this as there is often a clash with our local /datsets/ directory

[tool.pyright]
reportMissingTypeStubs = false
typeCheckingMode = "strict"
# Have to turn off unknown arguments checking since we are using the transformers library which is not typed
reportUnknownArgumentType = false
reportUnknownVariableType = false
reportUnknownMemberType = false
reportUnknownLambdaType = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
